# DialecticDJ

./: Cargo.toml
backend/: .env  .gitignore  Cargo.toml  db-only.yml  docker-compose.yml  setup-ddj-db.sh
backend/src/: authentication.rs  main.rs  model.rs  persistence.rs  player.rs  routes.rs
backend/src/persistence/: macros.rs  mod.rs  model.rs  pgsql.rs  queries.rs  retrievers.rs
cli/: Cargo.toml  run-server.sh
cli/src/: client.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs
ddj_core/: Cargo.toml
ddj_core/src/: types.rs
frontend/: Cargo.toml  index.html
frontend/res/: main.css
frontend/src/: lib.rs
