[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
rspotify = "0.11.5"
core = {path = "../core"}
thiserror = "1"
anyhow = "1"
tokio = {}
tokio-postgres = "0.7"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
