[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rspotify = "0.11.5"
ddj_core = { path = "../ddj_core" }
thiserror = "1"
anyhow = "1"
tokio = "1.20"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
# tokio-postgres = "0.7"
# postgres-types = { version = "0.2", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
const_format = "0.2"
uuid = { version = "1.1", features = ["v4"] }
base62 = "2.0.0"
