[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
core = {path = "../core"}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
rspotify = {}
anyhow = "1"
