[package]
name = "ddj_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["rspotify"]
rspotify = ["dep:rspotify"]
