[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Ethan Hunter <fc.spaceman@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
serde = { version = "1", features = ["derive"] }
seed = "0.9.2"
ddj_core = { path = "../ddj_core", default-features = false }
serde_json = "1"


[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
